--- a/assets/sass/_reset.scss
+++ b/assets/sass/_reset.scss
@@ -1,5 +1,11 @@
+@import url("https://fonts.google.com/specimen/Plus+Jakarta+Sans");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
