--- a/assets/sass/_reset.scss
+++ b/assets/sass/_reset.scss
@@ -8,4 +8,7 @@
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
+  background-color: $very-light-grayish-blue;
+  width: 100vw;
+  height: 100%;
 }
