--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -1,41 +1,16 @@
-// SMALL DEVICES
-
-@mixin sm {
-  @media (min-width: #{$screen-sm-min}) {
-    @content;
-  }
-}
-
-// MEDIUM DEVICES
-
-@mixin md {
-  @media (min-width: #{$screen-md-min}) {
-    @content;
-  }
-}
-
-// LARGE DEVICES
-
-@mixin lg {
-  @media (min-width: #{$screen-lg-min}) {
-    @content;
-  }
-}
-
-// EXTRA LARGE DEVICES
-
-@mixin xl {
-  @media (min-width: #{$screen-xl-min}) {
-    @content;
-  }
-}
-
 // FLEXBOX
-
 @mixin flex($justify, $align: center, $direction: row, $wrap: wrap) {
   display: flex;
   justify-content: $justify;
   align-items: $align;
   flex-direction: $direction;
   flex-wrap: $wrap;
+}
+
+// CENTER
+@mixin center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
