--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -7,6 +7,7 @@ $light-grayish-blue-2: hsl(205, 33%, 90%);
 $grayish-blue: hsl(219, 14%, 63%);
 $dark-grayish-blue: hsl(219, 12%, 42%);
 $very-dark-blue: hsl(224, 21%, 14%);
-$fs: 16px;
+$fs-paragraph: 16px;
 $fw-500: 500;
+$fw-600: 600;
 $fw-800: 800;
